--- a/frontend/src/components/TrackingsList.css
+++ b/frontend/src/components/TrackingsList.css
@@ -79,6 +79,33 @@
   white-space: nowrap;
 }
 
+.tracking-name-link {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: #00c8ff;
+  text-align: left;
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-color: transparent;
+  transition: var(--transition);
+  width: 100%;
+  display: inline-block;
+}
+
+.tracking-name-link:hover {
+  color: #00b0e6;
+  text-decoration-color: #00b0e6;
+}
+
+.tracking-name-link:focus {
+  outline: 2px solid #00c8ff;
+  outline-offset: 2px;
+  border-radius: 2px;
+}
+
 .tracking-icon {
   font-size: 1.5rem;
   display: inline-block;
@@ -106,13 +133,11 @@
 }
 
 .cell-actions {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0px;
   white-space: nowrap;
-}
-
-.cell-actions > * {
-  display: inline-block;
-  vertical-align: middle;
 }
 
 .btn-edit-icon {
@@ -127,7 +152,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin: 0 0px;
+  margin: 0;
 }
 
 .btn-edit-icon:hover {
